[package]
name = "database"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "database_server"
path = "src/server.rs"

[build-dependencies]
tonic-build = "0.10.2"

[dependencies]
database_lib = { path = "../database_lib" }
prost = "0.12.1"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.10.2"
